eded header and hero

--- a/index.html
+++ b/index.html
@@ -12,6 +12,46 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header class="header">
+        <div class="top-header">
+            <div class="container">
+                <ul class="contacts">
+                    <li class="contacts__item"><a href="#" class="contacts__link phone">123-12345</a></li>
+                    <li class="contacts__item"><a href="#" class="contacts__link mail">123@gmail.com</a></li>
+                </ul>
+
+                <ul class="user-nav">
+                    <li class="user-nav__item"><a href="#" class="user-nav__link">checkout</a></li>
+                    <li class="user-nav__item"><a href="#" class="user-nav__link">my account</a></li>
+                    <li class="user-nav__item"><a href="#" class="user-nav__link">wichlist</a></li>
+                    <li class="user-nav__item"><a href="#" class="user-nav__link">login</a></li>
+                    <li class="user-nav__item"><a href="#" class="user-nav__link">cart</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="bottom-header">
+            <div class="container">
+                <p class="logo">mart</p>
+
+                <ul class="site-nav">
+                    <li class="site-nav__item"><a href="#" class="site-nav__link">home</a></li>
+                    <li class="site-nav__item"><a href="#" class="site-nav__link">about us</a></li>
+                    <li class="site-nav__item"><a href="#" class="site-nav__link">page</a></li>
+                    <li class="site-nav__item"><a href="#" class="site-nav__link">shop</a></li>
+                    <li class="site-nav__item"><a href="#" class="site-nav__link">blog</a></li>
+                    <li class="site-nav__item"><a href="#" class="site-nav__link">contact us</a></li>
+                </ul>
+            </div>
+        </div>
+    </header>
+
+    <main>
+        <section class="hero">
+            <div class="container">
+
+            </div>
+        </section>
+    </main>
 </body>
 </html>
