eded section features

--- a/index.html
+++ b/index.html
@@ -47,10 +47,41 @@
     </header>
 
     <main>
-        <section class="hero">
+        <section class="banner">
             <div class="container">
 
+<div class="hero">
+    <p class="hero__top-description">DRESSES <b class="and">&</b> JEANS</p>
+    <p class="hero__bottom-description">FROM OURFAMOUS BRANDS <b class="sale">SALE</b></p>
+
+    <a href="#" class="hero__link">by now</a>
+</div>
+
             </div>
+        </section>
+
+        <section class="features">
+            <div class="container">
+                <ul class="fiatures-list">
+                    <li class="fiatures-list__item world">
+                        <h2 class="fiatures-list__title">settings</h2>
+                        <p class="fiatures-list__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum unde maxime sapiente placeat. Facilis voluptate fuga nisi sint quasi animi, doloremque ab, saepe ex ipsum at eius nobis. Laudantium deleniti eum voluptates similique aperiam dolorum veniam saepe perspiciatis odio qui?</p>
+                    </li>
+                    <li class="fiatures-list__item compas">
+                        <h2 class="fiatures-list__title">money back</h2>
+                        <p class="fiatures-list__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum unde maxime sapiente placeat. Facilis voluptate fuga nisi sint quasi animi, doloremque ab, saepe ex ipsum at eius nobis. Laudantium deleniti eum voluptates similique aperiam dolorum veniam saepe perspiciatis odio qui?</p>
+                    </li>
+                    <li class="fiatures-list__item seif">
+                        <h2 class="fiatures-list__title">settings</h2>
+                        <p class="fiatures-list__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum unde maxime sapiente placeat. Facilis voluptate fuga nisi sint quasi animi, doloremque ab, saepe ex ipsum at eius nobis. Laudantium deleniti eum voluptates similique aperiam dolorum veniam saepe perspiciatis odio qui?</p>
+                    </li>
+                    <li class="fiatures-list__item sun">
+                        <h2 class="fiatures-list__title">money back</h2>
+                        <p class="fiatures-list__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum unde maxime sapiente placeat. Facilis voluptate fuga nisi sint quasi animi, doloremque ab, saepe ex ipsum at eius nobis. Laudantium deleniti eum voluptates similique aperiam dolorum veniam saepe perspiciatis odio qui?</p>
+                    </li>
+                </ul>
+            </div>
+
         </section>
     </main>
 </body>
