eded new section

--- a/index.html
+++ b/index.html
@@ -83,6 +83,51 @@
             </div>
 
         </section>
+
+        <section class="new-colection">
+            <div class="container">
+                <h2 class="main-title">new colection</h2>
+
+                <ul class="card-list">
+
+                    <li class="card-list__item">
+                        <div class="overlay"><img src="./img/new/blue.png" alt="item" class="card-list__img"></div>
+                        <div class="card-list__buttons"><button class="card-list__button like"></button><button class="card-list__button settings"></button><button class="card-list__button time"></button><button class="card-list__button bascket"></button></div>
+                        <div class="inform">
+                            <p class="name">t-chirt</p>
+                            <p class="price">25$</p>
+                        </div>
+                    </li>
+
+                    <li class="card-list__item">
+                        <div class="overlay"><img src="./img/new/yellow.png" alt="item" class="card-list__img"></div>
+                        <div class="card-list__buttons"><button class="card-list__button like"></button><button class="card-list__button settings"></button><button class="card-list__button time"></button><button class="card-list__button bascket"></button></div>
+                        <div class="inform">
+                            <p class="name">t-chirt</p>
+                            <p class="price">25$</p>
+                        </div>
+                    </li>
+                    <li class="card-list__item">
+                        <div class="overlay"><img src="./img/new/woman.png" alt="item" class="card-list__img"></div>
+                        <div class="card-list__buttons"><button class="card-list__button like"></button><button class="card-list__button settings"></button><button class="card-list__button time"></button><button class="card-list__button bascket"></button></div>
+                        <div class="inform">
+                            <p class="name">t-chirt</p>
+                            <p class="price">25$</p>
+                        </div>
+                    </li>
+                    <li class="card-list__item">
+                        <div class="overlay"><img src="./img/new/blue.png" alt="item" class="card-list__img"></div>
+                        <div class="card-list__buttons"><button class="card-list__button like"></button><button class="card-list__button settings"></button><button class="card-list__button time"></button><button class="card-list__button bascket"></button></div>
+                        <div class="inform">
+                            <p class="name">t-chirt</p>
+                            <p class="price">25$</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
+
+       
     </main>
 </body>
 </html>
