--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
         <section class="new-colection">
             <div class="container">
-                <h2 class="main-title">new colection</h2>
+                <h2 class="main-title">new collection</h2>
 
                 <ul class="card-list">
 
@@ -124,6 +124,111 @@
                         </div>
                     </li>
                 </ul>
+            </div>
+        </section>
+
+        <section class="featured-products">
+            <div class="container">
+                <h2 class="main-title">featured products</h2>
+
+            <ul class="card-list">
+
+                <li class="card-list__item">
+                    <div class="overlay"><img src="./img/item/mart (1).png" alt="item" class="card-list__img"></div>
+                    <div class="card-list__buttons"><button class="card-list__button like"></button><button class="card-list__button settings"></button><button class="card-list__button time"></button><button class="card-list__button bascket"></button></div>
+                    <div class="inform">
+                        <p class="name">t-chirt</p>
+                        <p class="price">25$</p>
+                    </div>
+                </li>
+
+                <li class="card-list__item">
+                    <div class="overlay"><img src="./img/item/mart (2).png" alt="item" class="card-list__img"></div>
+                    <div class="card-list__buttons"><button class="card-list__button like"></button><button class="card-list__button settings"></button><button class="card-list__button time"></button><button class="card-list__button bascket"></button></div>
+                    <div class="inform">
+                        <p class="name">t-chirt</p>
+                        <p class="price">25$</p>
+                    </div>
+                </li>
+                <li class="card-list__item">
+                    <div class="overlay"><img src="./img/item/mart (3).png" alt="item" class="card-list__img"></div>
+                    <div class="card-list__buttons"><button class="card-list__button like"></button><button class="card-list__button settings"></button><button class="card-list__button time"></button><button class="card-list__button bascket"></button></div>
+                    <div class="inform">
+                        <p class="name">t-chirt</p>
+                        <p class="price">25$</p>
+                    </div>
+                </li>
+                <li class="card-list__item">
+                    <div class="overlay"><img src="./img/item/mart (4).png" alt="item" class="card-list__img"></div>
+                    <div class="card-list__buttons"><button class="card-list__button like"></button><button class="card-list__button settings"></button><button class="card-list__button time"></button><button class="card-list__button bascket"></button></div>
+                    <div class="inform">
+                        <p class="name">t-chirt</p>
+                        <p class="price">25$</p>
+                    </div>
+                </li>
+
+                <li class="card-list__item">
+                    <div class="overlay"><img src="./img/item/mart (5).png" alt="item" class="card-list__img"></div>
+                    <div class="card-list__buttons"><button class="card-list__button like"></button><button class="card-list__button settings"></button><button class="card-list__button time"></button><button class="card-list__button bascket"></button></div>
+                    <div class="inform">
+                        <p class="name">t-chirt</p>
+                        <p class="price">25$</p>
+                    </div>
+                </li>
+
+                <li class="card-list__item">
+                    <div class="overlay"><img src="./img/item/mart (6).png" alt="item" class="card-list__img"></div>
+                    <div class="card-list__buttons"><button class="card-list__button like"></button><button class="card-list__button settings"></button><button class="card-list__button time"></button><button class="card-list__button bascket"></button></div>
+                    <div class="inform">
+                        <p class="name">t-chirt</p>
+                        <p class="price">25$</p>
+                    </div>
+                </li>
+                <li class="card-list__item">
+                    <div class="overlay"><img src="./img/item/mart (7).png" alt="item" class="card-list__img"></div>
+                    <div class="card-list__buttons"><button class="card-list__button like"></button><button class="card-list__button settings"></button><button class="card-list__button time"></button><button class="card-list__button bascket"></button></div>
+                    <div class="inform">
+                        <p class="name">t-chirt</p>
+                        <p class="price">25$</p>
+                    </div>
+                </li>
+                <li class="card-list__item">
+                    <div class="overlay"><img src="./img/item/mart.png" alt="item" class="card-list__img"></div>
+                    <div class="card-list__buttons"><button class="card-list__button like"></button><button class="card-list__button settings"></button><button class="card-list__button time"></button><button class="card-list__button bascket"></button></div>
+                    <div class="inform">
+                        <p class="name">t-chirt</p>
+                        <p class="price">25$</p>
+                    </div>
+                </li>
+            </ul>
+
+            </div>
+        </section>
+
+        <section class="news">
+            <div class="container">
+                <h2 class="main-title">latest news</h2>
+
+            <ul class="news-list">
+                <li class="news-list__item">
+                    <img src="./img/inform/mart (8).png" alt="news" class="news-list__img">
+                    <h2 class="news-list__title">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque, ex.</h2>
+                    <p class="news-list__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id voluptatem fuga placeat facere libero ullam ratione doloribus tempora, tenetur eius.</p>
+                    <a href="" class="news-list__link">read more</a>
+                </li>
+                <li class="news-list__item">
+                    <img src="./img/inform/mart (9).png" alt="news" class="news-list__img">
+                    <h2 class="news-list__title">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque, ex.</h2>
+                    <p class="news-list__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id voluptatem fuga placeat facere libero ullam ratione doloribus tempora, tenetur eius.</p>
+                    <a href="" class="news-list__link">read more</a>
+                </li>
+                <li class="news-list__item">
+                    <img src="./img/inform/mart (10).png" alt="news" class="news-list__img">
+                    <h2 class="news-list__title">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque, ex.</h2>
+                    <p class="news-list__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id voluptatem fuga placeat facere libero ullam ratione doloribus tempora, tenetur eius.</p>
+                    <a href="" class="news-list__link">read more</a>
+                </li>
+            </ul>
             </div>
         </section>
 
