--- a/index.html
+++ b/index.html
@@ -231,8 +231,22 @@
             </ul>
             </div>
         </section>
-
-       
     </main>
+
+    <footer class="footer">
+<div class="footer__hero">
+    <h2 class="main-title">newslater</h2>
+    <p class="footer__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, perspiciatis?</p>
+
+    <form action="" class="newslater__form">
+        <label for="name">
+            <input class="newslater__input" type="text" id="name" name="user-email" placeholder="Enter your email here ">
+            
+        </label>
+        <button class="newslater__button" type="submit"></button>
+    </form>
+</div>
+</div>
+    </footer>
 </body>
 </html>
